# chess-analyst

./: .gitignore  PROJECT_PLAN.md  PROJECT_SPEC.md  README.md  TODO.md  pyproject.toml
chess_analyst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: download_pgn.py
source/: analyzer.py  consts.py  db.py  main.py  model_config.py  parser.py  retriever.py  vectordb.py
tests/: test_analyzer.py  test_db.py  test_parser.py  test_vectordb.py
